VPC_GPT.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template para criar uma VPC com 2 subnets públicas e 2 subnets privadas

Parameters:
  VPCName:
    Type: String
    Default: "MyVPC"
    Description: Nome da VPC
  VPCCidrBlock:
    Type: String
    Default: "10.0.0.0/16"
    Description: CIDR Block da VPC
  PublicSubnet1Cidr:
    Type: String
    Default: "10.0.1.0/24"
    Description: CIDR Block da primeira subnet pública
  PublicSubnet2Cidr:
    Type: String
    Default: "10.0.2.0/24"
    Description: CIDR Block da segunda subnet pública
  PrivateSubnet1Cidr:
    Type: String
    Default: "10.0.3.0/24"
    Description: CIDR Block da primeira subnet privada
  PrivateSubnet2Cidr:
    Type: String
    Default: "10.0.4.0/24"
    Description: CIDR Block da segunda subnet privada

Resources:
  # VPC
  VPC:
    Type: "AWS::EC2::VPC"
    Properties: 
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags: 
        - Key: Name
          Value: !Ref VPCName
  
  # Internet Gateway
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties: 
      Tags: 
        - Key: Name
          Value: "InternetGateway"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties: 
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnet 1
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties: 
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1Cidr
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: "Public Subnet 1"

  # Public Subnet 2
  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties: 
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2Cidr
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: "Public Subnet 2"

  # Private Subnet 1
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties: 
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1Cidr
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags: 
        - Key: Name
          Value: "Private Subnet 1"

  # Private Subnet 2
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties: 
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2Cidr
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags: 
        - Key: Name
          Value: "Private Subnet 2"

  # Route Tables
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: "Public Route Table"

  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: "Private Route Table"

  # Routes
  PublicRoute:
    Type: "AWS::EC2::Route"
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  # Subnet Associations
  PublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties: 
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # NAT Gateway
  EIPForNAT:
    Type: "AWS::EC2::EIP"

  NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties: 
      AllocationId: !GetAtt EIPForNAT.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags: 
        - Key: Name
          Value: "NAT Gateway"

  PrivateRoute:
    Type: "AWS::EC2::Route"
    Properties: 
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway

Outputs:
  VPCId:
    Description: "ID da VPC criada"
    Value: !Ref VPC
  PublicSubnet1Id:
    Description: "ID da primeira subnet pública"
    Value: !Ref PublicSubnet1
  PublicSubnet2Id:
    Description: "ID da segunda subnet pública"
    Value: !Ref PublicSubnet2
  PrivateSubnet1Id:
    Description: "ID da primeira subnet privada"
    Value: !Ref PrivateSubnet1
  PrivateSubnet2Id:
    Description: "ID da segunda subnet privada"
    Value: !Ref PrivateSubnet2
